fix(tables): add white-space nowrap to table cells for horizontal scroll on mobile

--- a/apps/dashboard/app/scss/components/_layout.scss
+++ b/apps/dashboard/app/scss/components/_layout.scss
@@ -89,7 +89,7 @@
 
       @include screen-small {
         display: flex;
-        position: fixed;
+        position: absolute;
         bottom: 0;
         left: 0;
         right: 0;
