--- a/apps/dashboard/app/scss/components/_table.scss
+++ b/apps/dashboard/app/scss/components/_table.scss
@@ -50,6 +50,7 @@
       padding: 12px 16px;
       font-size: 14px;
       color: #1a1a1a;
+      white-space: nowrap;
 
       &--right {
         text-align: right;
